# autonomous-mobile-robot

./: .gitignore  README.md  pyproject.toml
config/: cv.yaml  default.yaml
config/heads/: vision-head.yaml
docs/: computer-vision.md  configuration.md  development.md  getting-started.md  hardware-integration.md  head-module-interface.md  learning-system.md
src/core/: __init__.py
src/modules/: base.py  registry.py
